tests/ui/binop/binop-logic-int.rs
fn main() { let x = 1 && 2; }
//~^ ERROR mismatched types
//~| ERROR mismatched types
